<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lib_name">Mini Update Checker</string>
    <string name="new_update_available">New Update Available</string>
    <string name="there_is_a_new_version_available_for">There is a new version available for</string>
    <string name="your_version">Your Version:</string>
    <string name="demo_version1">1.4.0</string>
    <string name="latest_version">Latest Version:</string>
    <string name="demo_version2">1.4.2</string>
    <string name="not_now">Not Now</string>
    <string name="update">Update</string>
    <string name="new_update_available">New Update Available</string>
    <string name="not_now">Not Now</string>
    <string name="update">Update</string>
    <string name="update_now">Update Now</string>
    <string name="maybe_later">Maybe later</string>
</resources>